--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ p {
 
 .container {
   max-width: 100%;
-  width: 1440px;
+  width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -125,9 +125,11 @@ p {
 
 .hide {
   display: none;
+  transition-delay: 0.25s;
 }
 .show {
-  display: block;
+  display: block;  
+  transition-delay: 0.25s;
 }
 
 /** nav **/
@@ -135,7 +137,7 @@ nav .flex{
   display: flex;
   align-items: center;
   justify-content: space-between; 
-  margin: 4rem 0;
+  margin: 2rem 0;
 }
 nav ul { 
   display: flex;
@@ -148,6 +150,7 @@ nav li{
 nav a{
   text-decoration: none;
   text-transform: uppercase;
+  color: var(--very-darkblue);
 }
 nav a:hover{
   color: var(--soft-red);
@@ -180,23 +183,32 @@ nav .hamburger {
 .header {
   position: relative;
 }
+.header .svg-right {
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -5;
+}
+
 .header .flex > div:nth-of-type(1) {
   padding-right: 5%; 
 }
-.blue-bg-right {
-  position: absolute;
-  right: -200px;
-  height: 90%;
-  width: 50%;
-  bottom: -20%;
-  z-index: -5;
-}
-.blue-bg-right rect {
-  width: 100%;
-  height: 90%;
-}
 
 /** nav-content **/
+.illustration-wrapper {
+  position: relative;
+}
+.illustration-wrapper .svg-left {
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  bottom: -5%;
+  left: 0;
+  z-index: -5;
+}
+
 .illustration {
   width: 80%;
   margin: 0 auto 3rem;
@@ -209,11 +221,14 @@ nav .hamburger {
   flex: 1;
   padding: 2rem 0;
 }
-.illustration ul li a { 
-  padding: 2rem 4.3rem;
+.illustration ul li { 
+  border-bottom: 2px solid var(--gray);
 }
 .illustration ul li.active { 
   border-bottom: 5px solid var(--soft-red);
+}
+.illustration ul li a { 
+  padding: 2rem 4.3rem;
 }
 .illustration ul a {
   text-decoration: none;
@@ -222,23 +237,27 @@ nav .hamburger {
 .nav-content {
   position: relative; 
 }
-.nav-content div:nth-of-type(2) {
-  padding-left: 5rem;
+.nav-content .flex {
+  transition: all 2s;
 }
+
+.nav-content .flex  > div {
+  flex: 1;
+}
+
+.nav-content .flex div:nth-of-type(2) {
+  padding: 0 0 1rem 1rem;
+}
+
 .nav-content p {
   margin-bottom: 3rem;
 }
-.blue-bg-left {
-  position: absolute;
-  left: -90%;
-  height: 90%;
-  width: 120%;
-  bottom: -30%;
-  z-index: -5;
+/** nav switch **/
+.tab-content.hide{
+  display: none;
 }
-.blue-bg-left rect {
-  width: 100%;
-  height: 90%;
+.tab-content.active{
+  display: flex;
 }
 
 /** download **/
@@ -269,10 +288,10 @@ nav .hamburger {
   padding-top: 15%;
 }
 .browser-logos .card:nth-of-type(3) {
-  margin-top: 30%;
+  margin: 30% 0 0;
 }
 
-.browser-logos .card:nth-child(3n) {
+.browser-logos .card:nth-child(3) {
   margin-right: 0;
 }
 .browser-logos .card h4 {
